# volatility_console

./: .gitignore  FRONTEND_BACKEND_INTEGRATION.md  README.md  RUNBOOK.md  UI_REFERENCE.md
backend/: .gitignore  PLAN.md  RUNBOOKS.md  pyproject.toml  release_checklist.md  requirements.txt
backend/configs/: broker.yaml  pricing.yaml  qc.yaml  scenarios.yaml  strategy.yaml  universe.yaml
backend/docs/: architecture_overview.md  environment.md  known_limitations.md  schemas.md
backend/files/: .env.example  .gitignore  README.md  bootstrap_smoke_test.py  config.py  environment.md  environment.yaml  ibkr_adapter.py  logging.py  mock_adapter.py  pyproject.toml  session.py  state.py  test_step1.py  time_utils.py
backend/scripts/: bootstrap_smoke_test.py  seed_cache.py  seed_dashboard.py  seed_dashboard_data.py
backend/src/analytics/: README.md  basket_variance.py
backend/src/api/: main.py
backend/src/backtest/: engine.py  monte_carlo.py  shock_presets.py
backend/src/collectors/: raw_collector.py  raw_writer.py
backend/src/connectivity/: README.md  adapter_registry.py  ibkr_adapter.py  market_depth.py  mock_adapter.py  options_chain.py  session.py  state.py
backend/src/dashboard/: api.py  app.py  plots.py
backend/src/execution/: order_manager.py
backend/src/forwards/: README.md  engine.py  models.py
backend/src/historical/: data_fetcher.py  disk_cache.py  ibkr_loader.py  yfinance_loader.py
backend/src/iv/: README.md  models.py  solver.py
backend/src/orchestration/: README.md  jobs.py  replay.py  scheduler.py
backend/src/pricing/: README.md  american.py  european.py  models.py
backend/src/qc/: README.md  anomaly.py  checks.py  quote_filter.py  validation.py
backend/src/risk/: README.md  aggregation.py  correlation.py  hedge_suggest.py  models.py  pnl_attribution.py  portfolio_state.py  scenarios.py  uam.py  var.py
backend/src/snapshots/: README.md  builder.py  models.py
backend/src/storage/: README.md  influx_writer.py  postgres_writer.py  reader.py  schemas.py  writer.py
backend/static/: index.html
(+69 files in other folders)
