[project]
name = "vol-infra"
version = "0.1.0"
description = "Institutional-grade volatility infrastructure platform (IBKR-based). Strategy-agnostic engineering blueprint."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "vol-infra team" }]

dependencies = [
    # Broker connectivity
    "ib_async>=1.0.3",
    # Configuration and validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "PyYAML>=6.0.2",
    # Logging
    "structlog>=24.4.0",
    # Time/date utilities
    "python-dateutil>=2.9.0",
    # Numerical (placeholder for later steps; pinned to avoid drift later)
    "numpy>=1.26.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
vol-bootstrap = "scripts.bootstrap_smoke_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["ib_async.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
